2026/01/20/policy-as-code-rego-guardrails/gatekeeper/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredPodSecurity
metadata:
  name: pod-must-be-secure
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptNamespaces:
      - "kube-system"
      - "kube-public"
